fix: add flex-wrap for nav on header

--- a/cv.css
+++ b/cv.css
@@ -108,6 +108,11 @@ ul, ol {
   display: -ms-flexbox;
   display: flex;
   gap: 10px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .navigation__link {
   letter-spacing: 1px;
