--- a/header.sass
+++ b/header.sass
@@ -36,6 +36,8 @@
     &__list
         display: flex
         gap: 10px
+        flex-wrap: wrap
+        justify-content: center
     &__link
         letter-spacing: 1px
 
